--- a/Apps.Sanity/Apps.Sanity.csproj
+++ b/Apps.Sanity/Apps.Sanity.csproj
@@ -4,14 +4,16 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Product>App</Product>
-        <Description>Description</Description>
+        <Product>Sanity</Product>
+        <Description>Sanity is a modern headless CMS (Content Management System). Sanity uses structured content to endlessly re-use content across any channel and a composable approach to help businesses connect to any third-party technology, data source, and front end framework.</Description>
         <Version>1.0.0</Version>
-        <AssemblyName>Apps.App</AssemblyName>
+        <PackageId>Apps.Sanity</PackageId>
+        <AssemblyName>Apps.Sanity</AssemblyName>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.11.0" />
+        <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.2-alpha3" />
         <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.25" />
     </ItemGroup>
 
