Added Search content action

--- a/Tests.Sanity/appsettings.json.example
+++ b/Tests.Sanity/appsettings.json.example
@@ -1,6 +1,7 @@
 {
   "ConnectionDefinition": {
-    "API key": ""
+    "api_token": "",
+    "project_id": ""
   },
   "TestFolder": "C:\\Users\\..."
 }
