--- a/Apps.Sanity/Apps.Sanity.csproj
+++ b/Apps.Sanity/Apps.Sanity.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.11.0" />
         <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.2-alpha3" />
         <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.25" />
+        <PackageReference Include="HtmlAgilityPack" Version="1.11.71" />
     </ItemGroup>
 
     <ItemGroup>
