--- a/Apps.Sanity/Apps.Sanity.csproj
+++ b/Apps.Sanity/Apps.Sanity.csproj
@@ -4,9 +4,9 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Product>Sanity [Beta]</Product>
+        <Product>Sanity</Product>
         <Description>Sanity is a modern headless CMS (Content Management System). Sanity uses structured content to endlessly re-use content across any channel and a composable approach to help businesses connect to any third-party technology, data source, and front end framework.</Description>
-        <Version>1.1.1</Version>
+        <Version>1.1.2</Version>
         <PackageId>Apps.Sanity</PackageId>
         <AssemblyName>Apps.Sanity</AssemblyName>
     </PropertyGroup>
