--- a/Tests.Sanity/Tests.Sanity.csproj
+++ b/Tests.Sanity/Tests.Sanity.csproj
@@ -26,4 +26,10 @@
       <ProjectReference Include="..\Apps.Sanity\Apps.Sanity.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
